# Realtime-Vision

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: BlurFilter.hpp  EdgeDetectionFilter.hpp  FaceBlurFilter.hpp  Filter.hpp  GrayscaleFilter.hpp  SepiaFilter.hpp  VideoProcessor.hpp
src/: BlurFilter.cpp  EdgeDetectionFilter.cpp  FaceBlurFilter.cpp  GrayscaleFilter.cpp  SepiaFilter.cpp  VideoProcessor.cpp
tests/: CMakeLists.txt  test_video_processor.cpp
